
[TestLoginStoresKeyOutsideConfig - 1]
/auth/v1/token?grant_type=password
/rest/v1/device_keys?
---

[TestUnlockRotatesRefresh - 1]
/auth/v1/token?grant_type=password
/rest/v1/device_keys?
/auth/v1/token?grant_type=refresh_token
/auth/v1/token?grant_type=refresh_token
---

[TestUnlockRotatesRefresh - 2]
[
 {
  "refresh_token": "обновление-1"
 },
 {
  "refresh_token": "обновление-2"
 }
]
---

[TestLogout - 1]
/auth/v1/token?grant_type=password
/rest/v1/device_keys?
/auth/v1/token?grant_type=refresh_token
/auth/v1/logout?scope=local
---
